z-index fix

--- a/src/components/Controls/styles/Controls.module.css
+++ b/src/components/Controls/styles/Controls.module.css
@@ -1,6 +1,6 @@
 .controls {
 	position: relative;
-	z-index: 0;
+	z-index: 1;
 	width: fit-content;
 	margin: 30px auto;
 	margin-bottom: 0;
