--- a/src/components/Topbar/styles/Topbar.module.css
+++ b/src/components/Topbar/styles/Topbar.module.css
@@ -1,6 +1,6 @@
 .topbar_container {
 	position: sticky;
-	z-index: 1;
+	z-index: 2;
 	top: -20px;
 	height: 100px;
 	width: 100%;
